apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'org.greenrobot.greendao'
apply plugin: 'kotlin-android-extensions'
apply plugin: 'com.jakewharton.butterknife'
// gradle BuildVariants
//Build Variants = Product Flavor + Build Type
android {
    namespace "com.openapi.ks.free1"
    compileSdk 35
    ndkVersion "23.1.7779620"
    defaultConfig {
        applicationId "com.openapi.ks.free1"
        minSdk 28
        targetSdk 35
        versionCode 1001001016
        versionName "1.1.1.16"
        // Enabling multidex support.
        multiDexEnabled true
        flavorDimensions "versionCode"
        renderscriptTargetApi 18
        renderscriptSupportModeEnabled true
    }
    tasks.withType(JavaCompile).configureEach {
        options.fork = true
        options.forkOptions.jvmArgs += [
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = "17"
    }
    buildFeatures {
        viewBinding true
    }
    dexOptions {
//        incremental true
        preDexLibraries true
        javaMaxHeapSize "4g"
    }
    lintOptions {
        disable 'InvalidPackage'
        checkReleaseBuilds false
        abortOnError false
    }


    packagingOptions {
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/maven/com.squareup.okhttp/okhttp/pom.xml'
        exclude 'META-INF/maven/com.squareup.okhttp/okhttp/pom.properties'
        exclude 'META-INF/maven/com.squareup.okio/okio/pom.xml'
        exclude 'META-INF/maven/com.squareup.okio/okio/pom.properties'
        exclude 'META-INF/services/javax.annotation.processing.Processor'
    }
    sourceSets.main {
        jni.srcDirs = [] // disables the default ndk-build call (with on-the-fly Android.mk files)
//        jniLibs.srcDir 'src/main/jniLibs'
        jniLibs.srcDirs = ['libs']
    }
    signingConfigs {
        config {
            keyAlias 'themass'
            keyPassword 'themass'
            storeFile file('/Users/liguoqing/soft/myapp/key')
            storePassword 'themass'
        }
//        config {
//            keyAlias 'myapp'
//            keyPassword 'themass'
//            storeFile file('/home/web/local/mykey.jks')
//            storePassword 'themass'
//        }
    }
    buildTypes {
//        debug {
//            minifyEnabled false
//            debuggable true
//            zipAlignEnabled false // Zipalign优化
//            shrinkResources false
//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
//            signingConfig signingConfigs.config
//        }
        release {
            minifyEnabled true
            zipAlignEnabled true // Zipalign优化
            shrinkResources true // 移除无用的resource文件
            debuggable false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.config
        }
    }
    productFlavors {
        free {
            manifestPlaceholders = [CHANNEL_VALUE: "GOOGLEMARKET"]
        }
    }
}
greendao {
    schemaVersion 6
//    daoPackage 'com.ping.greendao.gen'
//    targetGenDir 'src/main/java'
}
dependencies {

    implementation fileTree(dir: 'libs', include: ['*.aar'])
    implementation fileTree(dir: 'libs', include: ['*.jar'])

//    implementation 'cn.jzvd:jiaozivideoplayer:6.2.12'
//    implementation(name: 'glide-transformations-2.0.1', ext: 'aar',)
    implementation "androidx.appcompat:appcompat:1.6.1"
    implementation "androidx.legacy:legacy-support-v13:1.0.0"
    implementation "androidx.legacy:legacy-support-v4:1.0.0"
    implementation "androidx.palette:palette:1.0.0"
    implementation "androidx.recyclerview:recyclerview"
    implementation "androidx.cardview:cardview"
//material 版本不能动，会影响kotlin版本
    implementation 'com.google.android.material:material:1.4.0'
    annotationProcessor 'androidx.annotation:annotation:1.8.0'
    implementation "androidx.percentlayout:percentlayout:1.0.0"
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.github.bumptech.glide:glide:4.15.1'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
    implementation 'com.github.bumptech.glide:okhttp3-integration:4.15.1'
    implementation 'jp.wasabeef:glide-transformations:4.3.0'

    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'


    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
    implementation 'com.jakewharton:butterknife:10.2.3'
    implementation 'com.jakewharton:disklrucache:2.0.2'
//    implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'

    // If you want to use the GPU Filters
//    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
    implementation 'org.greenrobot:eventbus:3.0.0'
    implementation 'org.greenrobot:greendao:3.3.0'

    implementation 'com.romainpiel.shimmer:library:1.4.0@aar'

    implementation 'com.github.lawloretienne:imagegallery:0.1.0'
    implementation 'com.sothree.slidinguppanel:library:3.3.1'

    implementation 'com.google.android.gms:play-services-ads:24.2.0'
//    implementation 'com.google.android.gms:play-services-base:18.2.0'
//    implementation 'com.google.android.gms:play-services-location:21.0.1'
//    implementation 'com.google.android.gms:play-services-wallet:19.1.0'

//    implementation 'com.mbridge.msdk.oversea:reward:16.4.31'
////如果您需要使用竞价广告,请添加此条依赖语句。(mbbid)
//    implementation 'com.mbridge.msdk.oversea:mbbid:16.4.31'
//    implementation 'com.mbridge.msdk.oversea:mbsplash:16.4.31'
//    implementation 'com.mbridge.msdk.oversea:mbbanner:16.4.31'
//    implementation 'com.mbridge.msdk.oversea:newinterstitial:16.4.31'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    implementation 'androidx.core:core-ktx:1.0.2'

}